[gd_scene load_steps=27 format=3 uid="uid://bvmtlo8cqvapm"]

[ext_resource type="Script" path="res://scripts/main_screen.gd" id="1_df085"]
[ext_resource type="Texture2D" uid="uid://b6hv7wxrg5pe7" path="res://res/black.png" id="1_m31l1"]
[ext_resource type="FontFile" uid="uid://pdioo34qexc8" path="res://fonts/Retro Gaming.ttf" id="2_hv2mq"]
[ext_resource type="FontFile" uid="uid://dng1gh5wqkhof" path="res://fonts/ARCADECLASSIC.TTF" id="3_ay0qd"]
[ext_resource type="Texture2D" uid="uid://cg04h8h2x1odb" path="res://res/flags/col.png" id="4_7eu7l"]
[ext_resource type="Texture2D" uid="uid://b3wnd5iqxel08" path="res://res/flags/mex.png" id="5_467a4"]
[ext_resource type="Texture2D" uid="uid://dirfufkhrvunx" path="res://res/flags/arg.png" id="6_gttef"]
[ext_resource type="Texture2D" uid="uid://c2jnjpko3bup0" path="res://res/flags/rus.png" id="7_wq4r0"]
[ext_resource type="Texture2D" uid="uid://b6gdvwlxftwho" path="res://res/flags/usa.png" id="8_nwtba"]
[ext_resource type="Texture2D" uid="uid://d1x7r83y8c5ub" path="res://res/flags/chi.png" id="9_453ea"]
[ext_resource type="Texture2D" uid="uid://31g8jobgtf1s" path="res://res/flags/can.png" id="10_ddoy7"]
[ext_resource type="Texture2D" uid="uid://bbai5t2sdsymp" path="res://res/flags/ind.png" id="11_0dqkf"]
[ext_resource type="Texture2D" uid="uid://c4y4coxj8k7wq" path="res://res/flags/brz.png" id="12_wde5h"]
[ext_resource type="Texture2D" uid="uid://daijqc16k8rp6" path="res://res/flags/ale.png" id="13_3tt20"]
[ext_resource type="AudioStream" uid="uid://t1c4dwm0dqkn" path="res://sfx/click.mp3" id="15_7lbb6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a8dai"]
bg_color = Color(0.160784, 0.160784, 0.160784, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qaw1b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1dioh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e02km"]

[sub_resource type="Animation" id="Animation_v5uka"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_8abwm"]
resource_name = "fade_out"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yowlu"]
_data = {
"RESET": SubResource("Animation_v5uka"),
"fade_out": SubResource("Animation_8abwm")
}

[sub_resource type="Animation" id="Animation_kob6s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OverlayLayer/Overlay:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_l0sc6"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OverlayLayer/Overlay:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_cslqg"]
resource_name = "fade_out"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OverlayLayer/Overlay:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qrl00"]
_data = {
"RESET": SubResource("Animation_kob6s"),
"fade_in": SubResource("Animation_l0sc6"),
"fade_out": SubResource("Animation_cslqg")
}

[node name="main_screen" type="Node2D"]
script = ExtResource("1_df085")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1922.0
offset_bottom = 1000.0
texture = ExtResource("1_m31l1")

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -484.0
offset_right = 484.0
offset_bottom = 110.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_hv2mq")
theme_override_font_sizes/font_size = 84
text = "Prepare to attack"

[node name="Label2" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 26.0
offset_top = 160.0
offset_right = 798.0
offset_bottom = 217.0
theme_override_fonts/font = ExtResource("2_hv2mq")
theme_override_font_sizes/font_size = 42
text = "Introduce your hacker name:"

[node name="PanelContainer" type="PanelContainer" parent="TextureRect"]
layout_mode = 0
offset_left = 809.0
offset_top = 144.0
offset_right = 1698.0
offset_bottom = 232.0
theme_override_styles/panel = SubResource("StyleBoxFlat_a8dai")

[node name="LineEdit" type="LineEdit" parent="TextureRect/PanelContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ay0qd")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_qaw1b")
theme_override_styles/focus = SubResource("StyleBoxEmpty_1dioh")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_e02km")
max_length = 30

[node name="Label3" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 35.0
offset_top = 272.0
offset_right = 587.0
offset_bottom = 361.0
theme_override_fonts/font = ExtResource("2_hv2mq")
theme_override_font_sizes/font_size = 42
text = "Select your country:"

[node name="col_button" type="TextureButton" parent="TextureRect"]
layout_mode = 0
offset_left = 83.0
offset_top = 400.0
offset_right = 373.0
offset_bottom = 593.0
texture_normal = ExtResource("4_7eu7l")

[node name="mex_button" type="TextureButton" parent="TextureRect"]
layout_mode = 0
offset_left = 456.0
offset_top = 401.0
offset_right = 744.0
offset_bottom = 589.0
texture_normal = ExtResource("5_467a4")

[node name="arg_button" type="TextureButton" parent="TextureRect"]
layout_mode = 0
offset_left = 85.0
offset_top = 652.0
offset_right = 370.0
offset_bottom = 845.0
texture_normal = ExtResource("6_gttef")

[node name="rus_button" type="TextureButton" parent="TextureRect"]
layout_mode = 0
offset_left = 459.0
offset_top = 648.0
offset_right = 744.0
offset_bottom = 836.0
texture_normal = ExtResource("7_wq4r0")

[node name="usa_button" type="TextureButton" parent="TextureRect"]
layout_mode = 0
offset_left = 824.0
offset_top = 400.0
offset_right = 1109.0
offset_bottom = 586.0
texture_normal = ExtResource("8_nwtba")

[node name="chi_button" type="TextureButton" parent="TextureRect"]
layout_mode = 0
offset_left = 824.0
offset_top = 649.0
offset_right = 1109.0
offset_bottom = 837.0
texture_normal = ExtResource("9_453ea")

[node name="can_button" type="TextureButton" parent="TextureRect"]
layout_mode = 0
offset_left = 1187.0
offset_top = 406.0
offset_right = 1472.0
offset_bottom = 594.0
texture_normal = ExtResource("10_ddoy7")

[node name="ind_button" type="TextureButton" parent="TextureRect"]
layout_mode = 0
offset_left = 1188.0
offset_top = 647.0
offset_right = 1473.0
offset_bottom = 838.0
texture_normal = ExtResource("11_0dqkf")

[node name="brz_button" type="TextureButton" parent="TextureRect"]
layout_mode = 0
offset_left = 1542.0
offset_top = 411.0
offset_right = 1827.0
offset_bottom = 604.0
texture_normal = ExtResource("12_wde5h")

[node name="ale_button" type="TextureButton" parent="TextureRect"]
layout_mode = 0
offset_left = 1545.0
offset_top = 645.0
offset_right = 1830.0
offset_bottom = 838.0
texture_normal = ExtResource("13_3tt20")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yowlu")
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qrl00")
}

[node name="OverlayLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="Overlay" type="ColorRect" parent="OverlayLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 12.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)
metadata/_edit_use_anchors_ = true

[node name="Sounds" type="Node2D" parent="." groups=["Sounds"]]

[node name="Click" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("15_7lbb6")

[connection signal="pressed" from="TextureRect/col_button" to="." method="_on_col_button_pressed"]
[connection signal="pressed" from="TextureRect/mex_button" to="." method="_on_mex_button_pressed"]
[connection signal="pressed" from="TextureRect/arg_button" to="." method="_on_arg_button_pressed"]
[connection signal="pressed" from="TextureRect/rus_button" to="." method="_on_rus_button_pressed"]
[connection signal="pressed" from="TextureRect/usa_button" to="." method="_on_usa_button_pressed"]
[connection signal="pressed" from="TextureRect/chi_button" to="." method="_on_chi_button_pressed"]
[connection signal="pressed" from="TextureRect/can_button" to="." method="_on_can_button_pressed"]
[connection signal="pressed" from="TextureRect/ind_button" to="." method="_on_ind_button_pressed"]
[connection signal="pressed" from="TextureRect/brz_button" to="." method="_on_brz_button_pressed"]
[connection signal="pressed" from="TextureRect/ale_button" to="." method="_on_ale_button_pressed"]
